[Technique] Optimize parameter set